--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,6 @@ simplelog = "0.12.0"
 buttplug = { version = "6.2.2", features = ["xinput-manager"] }
 tokio = "1.23.0"
 futures = "0.3.25"
-detour = "0"
+detour2 = "0"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
